--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meditation-app-react",
-  "homepage": "https://<USERNAME>.github.io/<REPO NAME>",
+  "homepage": "https://nickromero-prog.github.io/meditation-app-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
